[gd_scene load_steps=11 format=3 uid="uid://ywehbbjgshqe"]

[ext_resource type="Texture2D" uid="uid://kvkto0yqqb35" path="res://assets/sir_froggerton.png" id="1_8ho6b"]
[ext_resource type="Script" uid="uid://do0ykwgrh3drc" path="res://scenes/tutorial.gd" id="1_ph3nu"]
[ext_resource type="FontFile" uid="uid://ci1tr875gml4b" path="res://assets/DynaPuff/DynaPuff-Bold.ttf" id="2_ph3nu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kmhl"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.756863, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_8ho6b"]
font = ExtResource("2_ph3nu")
font_size = 20
font_color = Color(0.235294, 0.756863, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ph3nu"]
font = ExtResource("2_ph3nu")
font_color = Color(0.235294, 0.756863, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cq4me"]
font = ExtResource("2_ph3nu")
font_size = 25
font_color = Color(0.235294, 0.756863, 0, 1)
outline_size = 30

[sub_resource type="Animation" id="Animation_4kmhl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(281.5, 469)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.129412, 0.129412, 0.129412, 0.627451)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ph3nu"]
resource_name = "open"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(-4, -4),
"update": 0,
"values": [Vector2(281.5, 745), Vector2(281.5, 469)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.129412, 0.129412, 0.129412, 0), Color(0.129412, 0.129412, 0.129412, 0.627451)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0217909),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4kmhl"]
_data = {
&"RESET": SubResource("Animation_4kmhl"),
&"open": SubResource("Animation_ph3nu")
}

[node name="tutorial" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ph3nu")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.627451)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.5
offset_top = -179.0
offset_right = 294.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(294.5, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_4kmhl")

[node name="frog_sprite" type="TextureRect" parent="Panel"]
layout_mode = 1
offset_left = -59.5
offset_top = -79.0
offset_right = 240.5
offset_bottom = 221.0
pivot_offset = Vector2(150, 150)
texture = ExtResource("1_8ho6b")
expand_mode = 1

[node name="frog_words" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 175.0
offset_top = 26.0
offset_right = 576.0
offset_bottom = 151.0
label_settings = SubResource("LabelSettings_8ho6b")
autowrap_mode = 2

[node name="click_contine" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -153.5
offset_top = -28.0
offset_right = 31.5
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
text = "Click to continue"
label_settings = SubResource("LabelSettings_ph3nu")
autowrap_mode = 2

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -94.0
offset_right = 48.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
text = "Sir Froggerton"
label_settings = SubResource("LabelSettings_cq4me")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4kmhl")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
